# llm_context_copier

./: .gitignore  RepoCopier.spec  build.ps1  cli.py  config.json.example  context_generator.py  file_utils.py  gui.py  gui_copier.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
configs/: custom_preset.gitignore
src/llm_context_copier/: cli.py  context_generator.py  file_utils.py  gui.py  main.py
src/llm_context_copier/presets/: go.gitignore  node.gitignore  python.gitignore  rust.gitignore
